add without add command

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <h1>Pagw title</h1>
   <ul>
     <li>red</li>
+    <li>blue</li>
+    <label for="new label"></label>
   </ul>
 </body>
 </html>
